--- a/index.html
+++ b/index.html
@@ -6,5 +6,37 @@
         <title>Портфолио гитариста</title>
         <link rel="stylesheet" href="./css/style.css" />
     </head>
-    <body></body>
+    <body>
+        <header class="header">
+            <div class="container">
+                <div class="header__inner">
+                    <div class="logo">
+                        <img
+                            class="logo__img"
+                            src="./img/svg/header/logo.svg"
+                            alt="Логотип сайта-портфолио гитариста"
+                        />
+                    </div>
+                    <nav class="header__menu navigation">
+                        <ul class="navigation__list">
+                            <li class="navigation__item">
+                                <a class="navigation__link" href="#!"
+                                    >Обо мне</a
+                                >
+                            </li>
+                            <li class="navigation__item">
+                                <a class="navigation__link" href="#!"
+                                    >Занятия</a
+                                >
+                            </li>
+                            <li class="navigation__item">
+                                <a class="navigation__link" href="#!">Запись</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </header>
+        
+    </body>
 </html>
