--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="./css/style.css" />
     </head>
     <body>
-        <header class="header">
+        <header class="header gray-background">
             <div class="container">
                 <div class="header__inner">
                     <div class="logo">
@@ -37,6 +37,29 @@
                 </div>
             </div>
         </header>
-        
+        <main class="main">
+            <section class="hero gray-background">
+                <div class="container">
+                    <div class="hero__inner">
+                        <div class="hero__content">
+                            <img
+                                class="hero__guitarist"
+                                src="./img/hero/guitarist.png"
+                                alt="Картинка гитариста"
+                            />
+                            <div
+                                class="hero__rectangle hero__rectangle-blue"
+                            ></div>
+                            <div
+                                class="hero__rectangle hero__rectangle-gray"
+                            ></div>
+                            <div
+                                class="hero__rectangle hero__rectangle-orange"
+                            ></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
